manifest/main/default/objects/Order_custom__c/Order_custom__c.object-meta.xml
<CustomObject>
    <label>Order (custom)</label>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>Order number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>