manifest/main/default/objects/Order_custom__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Order_client</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>