manifest/main/default/objects/Order_custom__c/fields/Payment_Period__c.field-meta.xml
<CustomField>
    <fullName>Payment_Period__c</fullName>
    <label>Payment Period</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payment_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>