manifest/main/default/objects/Order_custom__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
                <default>true</default>
                <label>Cash</label>
            </value>
            <value>
                <fullName>Installments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>